--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,6 @@ channels:
  - defaults
 dependencies:
  - python=3.9
- - ncbi-genome-download
+ - ncbi-genome-download=0.3.3
  - blast=2.16.0
- - entrez-direct
+ - entrez-direct=22.4
